# last_kingdom

./: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
assets/WorldMap_Free_layout/backups/backup_2022-04-05_05-45-56/: WorldMap_Free_layout.ldtk
assets/WorldMap_Free_layout/backups/backup_2022-04-05_05-47-22/: WorldMap_Free_layout.ldtk
assets/sprite/: player_sheet.ase  player_walk.ase
assets/title/: firstUser.ldtk  ll.ldtk  test.ldtk
assets/waitting/title/: grass.ldtk  tut0.tset  tut1.tset
assets/waitting/title/sprite/: example.txt
src/: audio.rs  lib.rs  loading.rs  main.rs  menu.rs
src/config/: mod.rs
src/instance/: mod.rs  player.rs  snake.rs  utils.rs
src/state/: mod.rs  origin.rs
src/state/loading/: mod.rs
src/state/menu/: mod.rs
src/state/playing/: mod.rs
src/systems/: attack.rs  camera.rs  collision.rs  input.rs  line.rs  mod.rs  physics.rs  stateMachine.rs  timeLine.rs  title.rs  ui.rs
src/systems/debug/: collision.rs  egui.rs  fps.rs  instance.rs  mod.rs  origin.rs
src/systems/instance/: animation.rs  attack.rs  basicCreate.rs  collision.rs  mod.rs  props.rs  shadow.rs
src/systems/instance/factory/: mod.rs
src/systems/instance/iType/: mod.rs  player.rs  snake.rs
src/systems/instance/instanceType/: player.rs  snake.rs
src/systems/item/: mod.rs
src/utils/: mod.rs  num.rs  random.rs
template/: case.md  component.rs  render.rs  system.rs
里程碑/: 里程碑0.2
