[package]
name = "last_kingdom"
version = "0.1.0"
edition = "2021"


[dependencies]
# bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "latest" , features = ["dynamic"]}




bevy = { version = "0.7" }
# bevy依赖库
bevy_prototype_lyon = "0.5.0"
bevy_asset_loader = "0.10.0"

bevy_egui="0.13.0"
bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls"}
bevy-inspector-egui = "0.10.0"

bevy_ecs_ldtk= "0.3.0"






# 工具
rust-ini = "0.18.0"
serde_json="1.0.59"
rand = "0.8.3"
bevy_pkv="0.4.0"

# 碰撞库
duckduckgeo ={git="https://github.com/tiby312/duckduckgeo"}
broccoli = "3.5.0"
# duckduckgeo = "0.4.2"



# [dependencies.bevy_asset_loader_derive]
# version = "0.10.0"
# default-features = false
# features = ["render"]



[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

#[profile.release]
#lto = "thin"
#codegen-units = 1


# [profile.release]
# codegen-units = 1