[package]
name = "last_kingdom"
version = "0.1.0"
edition = "2021"


[dependencies]
# bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "latest" , features = ["dynamic"]}




bevy = { version = "0.8" }
bevy_egui="0.15.0"
bevy_derive="0.8"
# bevy依赖库
bevy_asset_loader = "0.12.0"
bevy-inspector-egui = "0.12.0"

# 比较好用的debug
# bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls"}
# bevy-inspector-egui = "0.11.0"






# 工具
rust-ini = "0.18.0"
serde_json="1.0.59"
rand = "0.8.3"

# 碰撞库
duckduckgeo ={git="https://github.com/tiby312/duckduckgeo"}
# broccoli = "4.1.1"
broccoli = "5.0.5"

# duckduckgeo = "0.4.2"

# 优化结构体
# dashmap="5.3.3"


# [dependencies.bevy_asset_loader_derive]
# version = "0.10.0"
# default-features = false
# features = ["render"]


crossbeam-channel = "0.5"


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1


